--- a/cheese.html
+++ b/cheese.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cheese Cakes</title>
     <link rel="shortcut icon" type="image" href="./image/box3.jpg">
 
-    <!-- CSS Links -->
-    <link rel="stylesheet" href="style.css">
-   
+    <link rel="stylesheet" href="/style/index.css">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
     <link href="https://fonts.googleapis.com/css2?family=Uchen&family=Dancing+Script&display=swap" rel="stylesheet">
-    
+
     <!-- Local Stylesheets -->
     <link rel="stylesheet" href="style/nav.css">
     <link rel="stylesheet" href="style/footer.css">
     <link rel="stylesheet" href="/style/cake.css">
 </head>
+
 <body>
     <div class="all-content">
         <!-- Navbar -->
@@ -28,14 +29,16 @@
                 <a class="navbar-brand" href="#" id="logo">
                     <img src="./image/logo.png" alt="Jas Pastry Logo" width="50px"> Jas Pastry
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapsibleNavbar">
                     <span><img src="./image/menu.png" alt="Menu" width="30px"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" id="navbardrop" role="button" data-bs-toggle="dropdown" aria-expanded="false">Category</a>
+                            <a href="#" class="nav-link dropdown-toggle" id="navbardrop" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">Category</a>
                             <ul class="dropdown-menu">
                                 <li><a href="birth.html" class="dropdown-item">Birthday Cake</a></li>
                                 <li><a href="brownie.html" class="dropdown-item">Brownie Cake</a></li>
@@ -50,15 +53,15 @@
                 </div>
             </div>
         </nav>
-        
+
         <!-- Product Section -->
         <section id="product-cards" data-aos="fade-up" data-aos-duration="1500">
             <div class="container">
-                <h1> CHEESE  <span style="color:#17a2b8;">CAKES</span></h1>
+                <h1> CHEESE <span style="color:#17a2b8;">CAKES</span></h1>
                 <div class="row" style="margin-top:50px;">
                     <div class="col-12 col-sm-6 col-lg-3 py-3 py-md-0  mb-4">
                         <div class="card">
-                            <img src="./image/cheese/chee-1-removebg-preview.png" >
+                            <img src="./image/cheese/chee-1-removebg-preview.png">
                             <div class="card-body">
                                 <h3>Auntie's Mango Cheesecake</h3>
                                 <p>Indulge in a tropical mango cheesecake with a buttery graham crust.</p>
@@ -99,8 +102,10 @@
         <!-- Footer -->
         <footer id="footer">
             <div class="icons text-center">
-                <a href="https://www.instagram.com/p/DGn9-y7ie93/?img_index=1&igsh=MzVycjY4c2JjcXdp" target="_blank"><i class="bx bxl-instagram"></i></a>
-                <a href="https://www.youtube.com/results?search_query=jas+home+pastry" target="_blank"><i class="bx bxl-youtube"></i></a>
+                <a href="https://www.instagram.com/p/DGn9-y7ie93/?img_index=1&igsh=MzVycjY4c2JjcXdp" target="_blank"><i
+                        class="bx bxl-instagram"></i></a>
+                <a href="https://www.youtube.com/results?search_query=jas+home+pastry" target="_blank"><i
+                        class="bx bxl-youtube"></i></a>
             </div>
             <div class="copyright text-center">
                 &copy; 2025 <strong>Jas Bakery</strong>. All Rights Reserved.
@@ -116,4 +121,5 @@
         AOS.init();
     </script>
 </body>
+
 </html>
