--- a/bfgh.html
+++ b/bfgh.html
@@ -17,10 +17,10 @@
     <!-- icons links -->
     <!-- animation links -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="/style/nav.css">
-    <link rel="stylesheet" href="/style/footer.css">
+    <link rel="stylesheet" href="style/nav.css">
+    <link rel="stylesheet" href="style/footer.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="/style/contantUs.css">
+    <link rel="stylesheet" href="style/contantUs.css">
      <!-- bootstrap links -->
      <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
