--- a/birth.html
+++ b/birth.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image" href="./image/box3.jpg">
 
     <!-- CSS Links -->
-    <link rel="stylesheet" href="/style/index.css">
+    <link rel="stylesheet" href="style/index.css">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -19,7 +19,7 @@
     <!-- Local Stylesheets -->
     <link rel="stylesheet" href="style/nav.css">
     <link rel="stylesheet" href="style/footer.css">
-    <link rel="stylesheet" href="/style/cake.css">
+    <link rel="stylesheet" href="style/cake.css">
 
 </head>
 
