--- a/cheese.html
+++ b/cheese.html
@@ -7,7 +7,7 @@
     <title>Cheese Cakes</title>
     <link rel="shortcut icon" type="image" href="./image/box3.jpg">
 
-    <link rel="stylesheet" href="/style/index.css">
+    <link rel="stylesheet" href="style/index.css">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -18,7 +18,7 @@
     <!-- Local Stylesheets -->
     <link rel="stylesheet" href="style/nav.css">
     <link rel="stylesheet" href="style/footer.css">
-    <link rel="stylesheet" href="/style/cake.css">
+    <link rel="stylesheet" href="style/cake.css">
 </head>
 
 <body>
