--- a/contactUs.html
+++ b/contactUs.html
@@ -18,11 +18,11 @@
 
 
     <!-- Local Stylesheets -->
-    <link rel="stylesheet" href="/style/index.css">
+    <link rel="stylesheet" href="style/index.css">
     <link rel="stylesheet" href="style/nav.css">
     <link rel="stylesheet" href="style/footer.css">
 
-    <link rel="stylesheet" href="/style/contantUs.css">
+    <link rel="stylesheet" href="style/contantUs.css">
 
 
 </head>
