--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
     <title>Gallery Cakes</title>
     <link rel="shortcut icon" type="image" href="./image/box3.jpg">
     <!-- CSS Links -->
-    <link rel="stylesheet" href="/style/index.css">
+    <link rel="stylesheet" href="style/index.css">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
