--- a/about.html
+++ b/about.html
@@ -62,15 +62,15 @@
         <!-- Product Section -->
         <!-- about start -->
         <div class="container" id="about" data-aos="fade-up" data-aos-duration="1500">
-            <h1>ABOUT<span style="color:#17a2b8;"> US</span> </h1>
-            <div class="row">
+            <h1>ABOUT  US </h1>
+            <div class="row ">
                 <div class="col-12 col-sm-12 col-lg-6 py-3 py-md-0  mb-4">
                     <div class="card">
                         <img src="./image/about.png" alt="Jas Pastry - About Us">
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-6 py-3 py-md-0  mb-4">
-                    <p style="font-size: large;">Welcome to <span style="color:#17a2b8;"><strong>Jas
+                    <p style="font-size: large;">Welcome to <span style="color:#9e004d;"><strong>Jas
                                 Pastry</strong></span> , where every bite is crafted with love and passion! Located in
                         the heart of Thoothukudi, we specialize in creating mouthwatering cakes, pastries, and baked
                         delights that add sweetness to your special moments. Our expert bakers use only the finest
