--- a/birth.html
+++ b/birth.html
@@ -59,7 +59,7 @@
         <!-- Product Section -->
         <section id="product-cards" data-aos="fade-up" data-aos-duration="1500">
             <div class="container">
-                <h1> BIRTHDAY <span style="color:#17a2b8;">CAKES</span></h1>
+                <h1> BIRTHDAY CAKES</h1>
                 <div class="row" style="margin-top:50px;">
                     <div class="col-12 col-sm-6 col-lg-3 py-3 py-md-0  mb-4">
                         <div class="card">
@@ -114,7 +114,7 @@
                 <a href="https://www.youtube.com/results?search_query=jas+home+pastry" target="_blank"><i
                         class="bx bxl-youtube"></i></a>
             </div>
-            <div class="copyright text-center">
+            <div class="copyright text-center ">
                 &copy; 2025 <strong>Jas Bakery</strong>. All Rights Reserved.
             </div>
         </footer>
