--- a/gallery.html
+++ b/gallery.html
@@ -17,14 +17,35 @@
 
 
     <!-- Local Stylesheets -->
-    <link rel="stylesheet" href="style/home.css">
-    <link rel="stylesheet" href="style/about.css">
+   
+
     <link rel="stylesheet" href="style/nav.css">
     <link rel="stylesheet" href="style/footer.css">
     <link rel="stylesheet" href="style/contactUs.css">
 
+<style>
+    #gallary {
+       
+        margin-top: 9% !important;
+    }
+    @media screen and (max-width: 500px) {
+        #gallary  h1 {
+        font-size: 1.5em; /* Slightly smaller */
+        margin-top: 30vh !important; /* Adjust based on screen height */
+    }
+}
 
+/* For larger mobile devices and small tablets */
+@media screen and (max-width: 768px) {
+    #gallary  h1 {
+        font-size: 1.8em;
+        margin-top: 20vh !important;
+    }
+}
+
+</style>
 </head>
+
 
 <body>
     <div class="all-content">
@@ -63,7 +84,7 @@
         <!-- gallary -->
         <section id="gallary" data-aos="fade-up" data-aos-duration="1500">
             <div class="container">
-                <h1>OUR <span style="color:#17a2b8;">GALLERY</span></h1>
+                <h1>OUR GALLERY</h1>
                 <div class="row" style="margin-top: 30px;">
                     <div class="col-md-4 py-3 py-md-0">
                         <div class="card">
