--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         <!-- gallary -->
         <section id="gallary" data-aos="fade-up" data-aos-duration="1500">
             <div class="container">
-                <h1>OUR <span style="color:#17a2b8;">GALLERY</span></h1>
+                <h1>OUR GALLERY</h1>
                 <div class="row" style="margin-top: 30px;">
                     <div class="col-md-4 py-3 py-md-0">
                         <div class="card">
@@ -328,7 +328,7 @@
         <!-- about -->
         <!-- about start -->
         <div class="container" id="about" data-aos="fade-up" data-aos-duration="1500">
-            <h1>ABOUT<span style="color:#17a2b8;"> US</span> </h1>
+            <h1>ABOUT  US </h1>
             <div class="row">
                 <div class="col-12 col-sm-12 col-lg-6 py-3 py-md-0  mb-4">
                     <div class="card">
@@ -336,7 +336,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-sm-12 col-lg-6 py-3 py-md-0  mb-4">
-                    <p style="font-size: large;">Welcome to <span style="color:#17a2b8;"><strong>Jas
+                    <p style="font-size: large;">Welcome to <span style="color:#9e004d;"><strong>Jas
                                 Pastry</strong></span>, where every bite is crafted with love and passion! Located in
                         the heart of Thoothukudi, we specialize in creating mouthwatering cakes, pastries, and baked
                         delights that add sweetness to your special moments. Our expert bakers use only the finest
@@ -355,7 +355,7 @@
 
         <!-- contact  -->
         <div class="container" id="contact" data-aos="fade-up" data-aos-duration="1500">
-            <h1 class="contact-heading">CONTACT <span style="color:#17a2b8;">US</span></h1>
+            <h1 class="contact-heading">CONTACT US</h1>
             <div class="container contact-container">
 
 
