--- a/brownie.html
+++ b/brownie.html
@@ -62,7 +62,7 @@
         <!-- Product Section -->
         <section id="product-cards" data-aos="fade-up" data-aos-duration="1500">
             <div class="container">
-                <h1> BROWNIE <span style="color:#17a2b8;">CAKES</span></h1>
+                <h1> BROWNIE CAKES</h1>
                 <div class="row" style="margin-top:50px;">
                     <div class="col-12 col-sm-6 col-lg-3 py-3 py-md-0  mb-4">
                         <div class="card">
@@ -86,7 +86,7 @@
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 py-3 py-md-0  mb-4">
                         <div class="card">
-                            <img src="./image/brownie/image-4-removebg-preview.png" alt="Nut Brownie">
+                            <img src="./image/brownie/nut-brow-removebg-preview.png" alt="Nut Brownie">
                             <div class="card-body">
                                 <h3>Nut Brownie</h3>
                                 <p>Crunchy nuts blended with chocolatey goodness.</p>
