--- a/cheese.html
+++ b/cheese.html
@@ -57,7 +57,7 @@
         <!-- Product Section -->
         <section id="product-cards" data-aos="fade-up" data-aos-duration="1500">
             <div class="container">
-                <h1> CHEESE <span style="color:#17a2b8;">CAKES</span></h1>
+                <h1> CHEESE CAKES</h1>
                 <div class="row" style="margin-top:50px;">
                     <div class="col-12 col-sm-6 col-lg-3 py-3 py-md-0  mb-4">
                         <div class="card">
