--- a/contactUs.html
+++ b/contactUs.html
@@ -63,7 +63,7 @@
         <!-- Product Section -->
 
         <div class="container" id="contact" data-aos="fade-up" data-aos-duration="1500">
-            <h1 class="contact-heading">CONTACT <span style="color:#17a2b8;">US</span></h1>
+            <h1 class="contact-heading">CONTACT US </h1>
             <div class="container contact-container">
 
 
@@ -95,7 +95,7 @@
                                     <textarea class="form-control" rows="3" placeholder="&#xf040; Message"
                                         style="font-family:Arial, FontAwesome" required></textarea>
                                 </div>
-                                <button type="submit" class="btn w-100 btn-primary">Contact Now</button>
+                                <button type="submit" class="btn w-100">Contact Now</button>
                             </form>
                         </div>
                     </div>
