--- a/cup.html
+++ b/cup.html
@@ -59,7 +59,7 @@
         <!-- Product Section -->
         <section id="product-cards" data-aos="fade-up" data-aos-duration="1500">
             <div class="container">
-                <h1> CUP <span style="color:#17a2b8;">CAKES</span></h1>
+                <h1> CUP CAKES</h1>
                 <div class="row" style="margin-top:50px;">
                     <div class="col-12 col-sm-6 col-lg-3 py-3 py-md-0  mb-4">
                         <div class="card">
