--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                                     <textarea class="form-control" rows="3" placeholder="&#xf040; Message"
                                         style="font-family:Arial, FontAwesome" required></textarea>
                                 </div>
-                                <button type="submit" class="btn w-100 btn-success">Contact Now</button>
+                                <button type="submit" class="btn w-100 ">Contact Now</button>
                             </form>
                         </div>
                     </div>
