--- a/contactUs.html
+++ b/contactUs.html
@@ -69,10 +69,28 @@
 
                 <div class="row w-100">
                     <div class="col-12 col-sm-12 col-lg-6 py-3 py-md-0  mb-4">
-                        <iframe
+                        <!-- <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2424.1491594704856!2d-1.0312269!3d52.299065!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48772e908b3eb3d7%3A0x891c2e377dcb9d84!2sLittle%20Brington!5e0!3m2!1sen!2suk!4v1614845500031!5m2!1sen!2suk"
                             width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy">
+                        </iframe> -->
+                        <p>Jas Bakery is a popular bakery located in Thoothukudi, Tamil Nadu, known for its delicious
+                            baked goods. While specific contact details are not provided in the available sources, you
+                            can visit the bakery at its physical location in Chennai.</p>
+
+                        <iframe class="mt-2"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2424.1491594704856!2d-1.0312269!3d52.299065!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48772e908b3eb3d7%3A0x891c2e377dcb9d84!2sLittle%20Brington!5e0!3m2!1sen!2suk!4v1614845500031!5m2!1sen!2suk"
+                            width="80%" height="250" style="border:0;" allowfullscreen="" loading="lazy">
                         </iframe>
+                        <div class="icons text-start mt-3">
+                            <a href="https://www.instagram.com/p/DGn9-y7ie93/?img_index=1&igsh=MzVycjY4c2JjcXdp"
+                                target="_blank"><i class="bx bxl-instagram"></i></a>
+                            <a href="https://www.youtube.com/results?search_query=jas+home+pastry" target="_blank"><i
+                                    class="bx bxl-youtube"></i></a>
+                            <a href="https://www.instagram.com/p/DGn9-y7ie93/?img_index=1&igsh=MzVycjY4c2JjcXdp"
+                                target="_blank"><i class="bx bx-phone"></i></a>
+                            <a href="https://www.youtube.com/results?search_query=jas+home+pastry" target="_blank"><i
+                                    class="bx bx-map"></i></a> 
+                        </div>
 
                     </div>
                     <div class="col-12 col-sm-12 col-lg-6 py-3 py-md-0  mb-4">
