--- a/contactUs.html
+++ b/contactUs.html
@@ -77,8 +77,8 @@
                             baked goods. While specific contact details are not provided in the available sources, you
                             can visit the bakery at its physical location in Chennai.</p>
 
-                        <iframe class="mt-2"
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2424.1491594704856!2d-1.0312269!3d52.299065!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48772e908b3eb3d7%3A0x891c2e377dcb9d84!2sLittle%20Brington!5e0!3m2!1sen!2suk!4v1614845500031!5m2!1sen!2suk"
+                            <iframe class="mt-2 text-start me-5"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3930.0539978038357!2d78.1546597!3d8.8048285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b03efc997a030d7%3A0x45d1bd22f630f134!2sJas%20Pastry!5e0!3m2!1sen!2sin!4v1710500000000"
                             width="80%" height="250" style="border:0;" allowfullscreen="" loading="lazy">
                         </iframe>
                         <div class="icons text-start mt-3">
@@ -88,7 +88,7 @@
                                     class="bx bxl-youtube"></i></a>
                             <a href="https://www.instagram.com/p/DGn9-y7ie93/?img_index=1&igsh=MzVycjY4c2JjcXdp"
                                 target="_blank"><i class="bx bx-phone"></i></a>
-                            <a href="https://www.youtube.com/results?search_query=jas+home+pastry" target="_blank"><i
+                                <a href="https://maps.app.goo.gl/jVdGXdFybpYBYYQ76?g_st=iw" target="_blank"><i
                                     class="bx bx-map"></i></a> 
                         </div>
 
